@@ -86,7 +86,7 @@ class ModuleIsotopeCheckout extends ModuleIsotope
 			$objTemplate->title = $this->headline;
 			$objTemplate->id = $this->id;
 			$objTemplate->link = $this->name;
-			$objTemplate->href = $this->Environment->script . '?do=' . ((version_compare(VERSION.'.'.BUILD, '2.9.0', '>=')) ? 'themes&amp;table=tl_module' : 'modules') . '&amp;act=edit&amp;id=' . $this->id;
+			$objTemplate->href = 'contao/main.php?do=themes&amp;table=tl_module&amp;act=edit&amp;id=' . $this->id;
 
 			return $objTemplate->parse();
 		}
@@ -306,6 +306,7 @@ class ModuleIsotopeCheckout extends ModuleIsotope
 		}
 
 		$this->Template->steps = $arrSteps;
+		$this->Template->activeStep = $GLOBALS['ISO_LANG']['MSC']['activeStep'];
 
 
 		// Hide back buttons it this is the first step
